Refactor structure of project and bump plugins